--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-autoplay": "^8.0.0-rc17",
+    "embla-carousel-react": "^8.0.0-rc17",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
