feat: [3405] change lightbox lib

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "yet-another-react-lightbox": "^3.21.1",
